[metadata]
name = Flask-Pathcache
version = 0.2.3
url = https://github.com/sh4dowb/flask-pathcache
project_urls =
    Donate = https://cagriari.com/
    Documentation = https://github.com/sh4dowb/flask-pathcache
    Source Code = https://github.com/sh4dowb/flask-pathcache
    Issue Tracker = https://github.com/sh4dowb/flask-pathcache/issues
license = MIT License
license_files = LICENSE
maintainer = sh4dowb
maintainer_email = web@cagriari.com
description = Path based caching for Flask
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Framework :: Flask
    Programming Language :: Python

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.7
install_requires =
    cachelib >= 0.9.0

[options.packages.find]
where = src
